--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "bootstrap": "^5.3.8",
-
+    "lucide-react": "^0.561.0",
+    "next": "^16.0.8",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
+    "router": "^2.2.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
