--- a/package.json
+++ b/package.json
@@ -9,18 +9,15 @@
     "lint": "eslint"
   },
   "dependencies": {
-    
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.1",
-    "@mui/icons-material": "^7.3.6",
-    "@mui/material": "^7.3.6",
-
+    "@fingerprintjs/fingerprintjs": "^5.0.1",
+    "@hcaptcha/react-hcaptcha": "^1.17.1",
+    "bootstrap": "^5.3.8",
     "framer-motion": "^12.23.25",
+    "jspdf": "^3.0.4",
     "lucide-react": "^0.556.0",
     "next": "16.0.8",
     "react": "19.2.1",
     "react-dom": "19.2.1",
-    "bootstrap": "^5.3.8",
     "router": "^2.2.0"
   },
   "devDependencies": {
