--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "^16.1.1",
     "react": "^19.2.1",
     "react-dom": "19.2.1",
+    "react-elastic-carousel": "^0.11.5",
     "react-intersection-observer": "^10.0.0",
     "router": "^2.2.0",
     "styled-components": "^6.1.19",
