--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@itseasy21/react-elastic-carousel": "^1.0.2",
     "@mui/icons-material": "^7.3.6",
     "@mui/material": "^7.3.6",
+    "animejs": "^4.2.2",
     "bootstrap": "^5.3.8",
     "framer-motion": "^12.25.0",
     "jspdf": "^3.0.4",
